# MyShapez

./: LICENSE  README.md
MyShapez/: Belt.cpp  Belt.h  CMakeLists.txt  ChooseScene.cpp  ChooseScene.h  Cutter.cpp  Cutter.h  HelpScene.cpp  HelpScene.h  PlayScene.cpp  RoundScene.cpp  RoundScene.h  ShopScene.cpp  ShopScene.h  StartScene.cpp  StartScene.h  Trash.cpp  Trash.h  WinScene.cpp  WinScene.h  WindowControl.cpp  WindowControl.h  building.cpp  building.h  config.h  gamemap.cpp  gamemap.h  hub.cpp  hub.h  main.cpp  miner.cpp  miner.h  playscene.h  res.qrc  scene.cpp  scene.h  shape.h  timer.cpp  timer.h  vec.h
build-MyShapez-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake  res.qrc
build-MyShapez-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/MyShapez_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-MyShapez-Desktop_Qt_6_7_0_MinGW_64_bit-Debug/MyShapez_autogen/EWIEGA46WW/: moc_WindowControl.cpp  moc_WindowControl.cpp.d  moc_gamewindow.cpp  moc_gamewindow.cpp.d  moc_mainscene.cpp  moc_mainscene.cpp.d  moc_scene.cpp  moc_scene.cpp.d
build-MyShapez-Desktop_Qt_6_7_0_MinGW_64_bit-Release/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
